[tool.poetry]
name = "onelearn"
version = "0.1.0"
description = "Machine learning algorithms for online learning"
authors = ["Stéphane Gaïffas <stephane.gaiffas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bokeh = "^1.3.4"
matplotlib = "^3.1"
numba = "^0.48"
numpy = "^1.17.4"
scikit-learn = "^0.22"
scipy = "^1.3.2"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
