[tool.poetry]
name = "onelearn"
version = "0.1.2"
description = "Machine learning algorithms for online learning"
authors = ["Stéphane Gaïffas <stephane.gaiffas@gmail.com>"]

[tool.poetry.dependencies]
bokeh = "^1.3.4"
colorcet = "^2.0.2"
matplotlib = "^3.1"
numba = "^0.48"
numpy = "^1.17.4"
python = "^3.7"
scikit-learn = "^0.22"
scipy = "^1.3.2"
streamlit = "^0.49.0"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
