[tool.poetry]
name = "onelearn"
version = "0.2.0"
description = "onelearn is a small python package for online learning"
readme = "README.md"
authors = ["Stéphane Gaïffas <stephane.gaiffas@gmail.com>"]
homepage = "https://onelearn.readthedocs.io"
documentation = "https://onelearn.readthedocs.io"
keywords = [
    "machine-learning",
    "online-learning-algorithms",
    "python",
    "random-forest",
    "classification",
    "regression"
]
repository = "https://github.com/onelearn/onelearn"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
bokeh = "^1.3.4"
colorcet = "^2.0.2"
matplotlib = "^3.1"
numba = "^0.48"
numpy = "^1.17.4"
python = "^3.6"
seaborn = "^0.9"
scikit-learn = "^0.22"
scipy = "^1.3.2"
streamlit = "^0.49.0"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
pytest = "^5.3"
pytest-cov = "^2.8"
python-coveralls = "^2.9"
